# sahajmails

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
docs/: USER_GUIDE.md
sahajmails/: __init__.py  __main__.py  app.py  cli.py
tests/: test_core.py
